chart/templates/mytube-loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: mytube-lb
spec:
  type: LoadBalancer
  selector:
    app: mytube
    service: video-streaming
  ports:
  - port: 80
    targetPort: 4002 # streaming port
